Ajout utilisation googlemaps

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:text="GPS"
             android:id="@+id/GPSBtn"
+            android:onClick="onGPSButtonClick"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="50dp"
             android:layout_marginRight="50dp" />
