--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Historique"
+            android:onClick="onHistoriqueButtonClick"
             android:id="@+id/historiqueBtn"
             android:layout_gravity="center"
             android:layout_marginTop="130dp" />
@@ -69,22 +70,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Frequence de mise a jour (s)"
+            android:text="Frequence de mise a jour"
             android:id="@+id/textView3"
             android:layout_gravity="center_horizontal|top"
             android:textColor="#ffffffff"
             android:layout_marginTop="120dp" />
 
-        <EditText
+        <SeekBar
+            android:layout_width="176dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/frequenceBar"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="180dp"
+            android:background="#ffffffff"
+            android:max="100"
+            android:progress="0" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="2"
-            android:id="@+id/frequency"
-            android:layout_gravity="center_horizontal|top"
-            android:textColor="#ffffffff"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="10"
+            android:id="@+id/freqText"
+            android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="150dp"
-            android:inputType="number"/>
+            android:textColor="#ffffffff" />
 
     </FrameLayout>
 
