--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button"
+            android:onClick="onH1ButtonClick"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.25"
             android:enabled="false" />
@@ -34,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button2"
+            android:onClick="onH2ButtonClick"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.25"
             android:enabled="false" />
@@ -42,6 +44,7 @@
             android:layout_width="353dp"
             android:layout_height="wrap_content"
             android:id="@+id/button3"
+            android:onClick="onH3ButtonClick"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.25"
             android:enabled="false" />
